<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BookUM</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_buy_book_list">Course Books Available</string>
    <string name="title_activity_sell_book_list">TEXTBOOK INFO</string>
    <string name="edit_contact_info">ENTER SCHOOL EMAIL</string>
    <string name="edit_course_name">ENTER COURSE NAME (EX. CMSC131)</string>
    <string name="edit_textbook_name">ENTER TEXTBOOK NAME</string>
    <string name="edit_swap">SWAP?</string>
    <string name="edit_book_name">(Enter Name of Textbook To Swap For)</string>
    <string name="edit_sell">SELL?</string>
    <string name="edit_amount">Enter Dollar Amount (Ex. 55)</string>
    <string name="title_activity_successful_submit"></string>
    <string name="title_activity_book_search">Search for Textbook</string>

    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>

    <string name="title_activity_our_info">ABOUT US :)</string>

</resources>
